--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
   background-position: center;
   background-repeat: no-repeat;
   overflow: auto;
+  transition: 1s;
 
 }
 header{
@@ -47,10 +48,11 @@ header ul{
 header li{
   padding: 5px;
   font-size: 1rem;
+  animation: Show 2s ease-in-out 1 forwards;
 }
 
 #image-track {
-  overflow: auto;
+  overflow: hidden;
   background-color: rgba(0, 0, 0, 0.684);
   display: flex;
   border-radius: 20px;
@@ -60,6 +62,7 @@ header li{
   margin: 150px auto 0;
   opacity: 1;
   transition: 1s;
+  animation: Show 2s ease-in-out 1 forwards;
 }
 
 #image-track img{
@@ -93,6 +96,7 @@ header li{
   font-size: 1rem;
   transition: 1s;
   z-index: 99;
+  animation: Show 2s ease-in-out 1 forwards;
 }
 
 #quotes .content{
@@ -122,5 +126,26 @@ h1:hover{
   }
   .close{
     display: block;
+  }
+}
+
+@keyframes Hide {
+  0%{
+    scale : (100%, 100%);
+    opacity: 1;
+  }
+  100%{
+    scale: (0%, 0%);
+    opacity: 0;
+  }
+}
+@keyframes Show {
+  0%{
+    scale : (0%, 0%);
+    opacity: 0;
+  }
+  100%{
+    scale: (100%, 100%);
+    opacity: 1;
   }
 }
